--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@
 .App {
   text-align: center;
   font-family: Helvetica;
-  background-image: url("/fo.jpg");
+  /* background-image: url("/fo.jpg"); */
 }
 
 /* .App-logo {
